login register bg

--- a/user/src/pages/login/login.css
+++ b/user/src/pages/login/login.css
@@ -1,14 +1,25 @@
+html{
+  background-image: url(https://www.viasat.com/content/dam/us-site/government/images/1245270_Space_Domain_Hero_003.jpg) ;
+  background-repeat: no-repeat; 
+  background-size: cover;
+  height: 100hv;
+  wight:100vw;
+}
+
+body{
+  color: white;
+}
+
+
+
 .login {
   height: calc(100vh - 50px);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(
-      rgba(255, 255, 255, 0.5),
-      rgba(255, 255, 255, 0.5)
-    ),
-    url("https://images.pexels.com/photos/768473/pexels-photo-768473.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+ 
+   
   background-size: cover;
 }
 
