--- a/user/src/pages/register/register.css
+++ b/user/src/pages/register/register.css
@@ -3,7 +3,7 @@ html{
   background-repeat: no-repeat; 
   background-size: cover;
   height: 100hv;
-  wight:100vw;
+  width:100vw;
 }
 
 body{
@@ -14,17 +14,10 @@ body{
 .register {
   height: calc(100vh - 50px);
   display: flex;
-  flex-direction: column;
+  flex-direction:column;
   align-items: center;
   justify-content: center;
   
-  
-  /*linear-gradient(
-      rgba(255, 255, 255, 0.5),
-      rgba(255, 255, 255, 0.5)*/
-    
-    /*url("https://images.pexels.com/photos/317355/pexels-photo-317355.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");*/
-  background-size: cover;
 }
 
 .registerTitle {
@@ -69,7 +62,6 @@ body{
   background-color: rgb(130, 203, 237);
   border: 1px solid white;
   cursor: pointer;
-  border: none;
   padding: 10px;
   color: white;
   border-radius: 10px;
