--- a/user/src/pages/login/login.css
+++ b/user/src/pages/login/login.css
@@ -27,6 +27,7 @@ body{
   margin-top: 20px;
   display: flex;
   flex-direction: column;
+  border-radius: 10px;
 }
 
 .loginForm > label {
@@ -37,6 +38,7 @@ body{
   padding: 10px;
   background-color: white;
   border: none;
+  border-radius: 10px;
 }
 
 .loginButton {
