--- a/user/src/pages/register/register.css
+++ b/user/src/pages/register/register.css
@@ -1,5 +1,5 @@
 html{
-  background-image: url(https://www.viasat.com/content/dam/us-site/government/images/1245270_Space_Domain_Hero_003.jpg) ;
+  /*background-image: url(https://www.viasat.com/content/dam/us-site/government/images/1245270_Space_Domain_Hero_003.jpg) ;*/
   background-repeat: no-repeat; 
   background-size: cover;
   height: 100hv;
