--- a/user/src/pages/login/login.css
+++ b/user/src/pages/login/login.css
@@ -41,6 +41,7 @@ body{
 
 .login {
   height: calc(100vh - 50px);
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
