--- a/user/src/components/header/header.css
+++ b/user/src/components/header/header.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Equinox";
-  /*src: url(/Users/himaniagarwal/Desktop/Work/vsc/BlogsIGDTUW/user/src/assets/fonts/FontsFree-Net-EquinoxRegular.ttf);*/
+  src: url(C:\igdtuwblogs\BlogsIGDTUW\user\src\assets\fonts\FontsFree-Net-EquinoxRegular.ttf);
   font-weight: bold;
 }
 
@@ -13,7 +13,7 @@
   flex-direction: column;
   align-items: center;
   font-family: "Equinox";
-  color: rgb(225, 11, 11);
+  color: rgb(255, 255, 255);
 }
 
 .headerTitleSm {
