--- a/user/src/components/header/header.css
+++ b/user/src/components/header/header.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Equinox";
-  src: url(C:\igdtuwblogs\BlogsIGDTUW\user\src\assets\fonts\FontsFree-Net-EquinoxRegular.ttf);
+  src: url(/Users/himaniagarwal/Desktop/Work/vsc/BlogsIGDTUW-1/user/src/assets/fonts/FontsFree-Net-EquinoxRegular.ttf);
   font-weight: bold;
 }
 
