--- a/user/src/components/sidebar/sidebar.css
+++ b/user/src/components/sidebar/sidebar.css
@@ -2,7 +2,7 @@
   flex: 3;
   margin: 20px;
   padding-bottom: 30px;
-  background-color: #fdfbfb;
+  background-color: rgb(130, 203, 237);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
