--- a/user/src/pages/login/login.css
+++ b/user/src/pages/login/login.css
@@ -53,7 +53,7 @@ html{
   margin-top: 20px;
   cursor: pointer;
   background-color: rgb(69, 180, 207);
-  border: none;
+  border : 1px solid white;
   color: white;
   border-radius: 10px;
   padding: 10px;
@@ -62,7 +62,7 @@ html{
 
 .loginButton:disabled{
   cursor: not-allowed;
-  background-color: rgb(252, 173, 173);
+  background-color: rgb(69, 180, 207);
   font-family: "Equinox";
 }
 
