--- a/user/src/components/header/header.css
+++ b/user/src/components/header/header.css
@@ -1,7 +1,8 @@
 @font-face {
   font-family: "Equinox";
-  src: url(/Users/himaniagarwal/Desktop/Work/vsc/BlogsIGDTUW-2/user/src/assets/fonts/FontsFree-Net-EquinoxRegular.ttf);
-  font-weight: bold;
+ /* src: url(/Users/himaniagarwal/Desktop/Work/vsc/BlogsIGDTUW-2/user/src/assets/fonts/FontsFree-Net-EquinoxRegular.ttf);
+   */
+ font-weight: bold;
 }
 
 .header {
