--- a/user/src/pages/login/login.css
+++ b/user/src/pages/login/login.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: "Equinox";
-  src: url(/Users/himaniagarwal/Desktop/Work/vsc/BlogsIGDTUW-2/user/src/assets/fonts/FontsFree-Net-EquinoxRegular.ttf);
+  /* src: url(/Users/himaniagarwal/Desktop/Work/vsc/BlogsIGDTUW-2/user/src/assets/fonts/FontsFree-Net-EquinoxRegular.ttf);
+  */
   font-weight: bold;
 }
 
