--- a/user/src/components/topbar/topbar.css
+++ b/user/src/components/topbar/topbar.css
@@ -1,12 +1,19 @@
+@font-face {
+  font-family: "Equinox";
+  src: url("../../assets/fonts/FontsFree-Net-EquinoxRegular.ttf");
+   
+  font-weight: bold;
+}
+
 .top {
   width: 100%;
   height: 50px;
-  background-color: rgb(130, 203, 237);;
+  background-color: rgb(130, 203, 237);
   position: sticky;
   top: 0;
   display: flex;
   align-items: center;
-  font-family: "Josefin Sans", sans-serif;
+  font-family: "Equinox";
   z-index: 999;
 }
 
@@ -16,6 +23,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: "Equinox";
 }
 
 .topCenter {
@@ -43,6 +51,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  font-family: "Equinox";
 }
 
 .topListItem {
@@ -50,6 +59,7 @@
   font-size: 18px;
   font-weight: 300;
   cursor: pointer;
+  font-family: "Equinox";
 }
 
 .topSearchIcon {
