--- a/user/src/components/post/post.css
+++ b/user/src/components/post/post.css
@@ -1,6 +1,7 @@
 .post {
   width: 385px;
   margin: 0px 25px 40px 25px;
+  color: antiquewhite;
 }
 
 .postImg {
@@ -14,12 +15,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: rgb(243, 251, 192);
 }
 
 .postCat {
   font-family: "Varela Round", sans-serif;
   font-size: 11px;
-  color: #be9656;
+  color: rgb(255, 255, 255);
   line-height: 20px;
   margin-top: 15px;
   margin-right: 10px;
@@ -28,24 +30,26 @@
 
 .postTitle {
   font-family: "Josefin Sans", sans-serif;
+  color: rgb(238, 168, 255);
   font-size: 24px;
   font-weight: 700;
   margin-top: 15px;
   cursor: pointer;
+  align-content: center;
 }
 
 .postDate {
   font-family: "Lora", serif;
   font-style: italic;
   font-size: 13px;
-  color: #999;
+  color: rgb(255, 255, 255);
   margin-top: 15px;
 }
 
 .postDesc {
   font-family: "Varela Round", sans-serif;
   font-size: 14px;
-  color: #444;
+  color: rgb(255, 255, 255);
   line-height: 24px;
   margin-top: 15px;
   overflow: hidden;
