--- a/user/src/components/sidebar/sidebar.css
+++ b/user/src/components/sidebar/sidebar.css
@@ -1,8 +1,15 @@
+@font-face {
+  font-family: "Equinox";
+  src: url("../../assets/fonts/FontsFree-Net-EquinoxRegular.ttf");
+   
+  font-weight: bold;
+}
+
 .sidebar {
   flex: 3;
   margin: 20px;
   padding-bottom: 30px;
-  background-color: rgb(130, 203, 237);
+  background-color:rgb(130, 203, 237);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -21,10 +28,10 @@
   width: 80%;
   border-top: 1px solid #a7a4a4;
   border-bottom: 1px solid #a7a4a4;
-  font-family: "Varela Round", sans-serif;
+  font-family: "Equinox";
   font-size: 12px;
-  color: #222;
-  font-weight: 600;
+  color: rgb(0, 0, 0);
+  font-weight: 1000;
   line-height: 20px;
   text-align: center;
 }
