--- a/user/src/pages/write/write.css
+++ b/user/src/pages/write/write.css
@@ -29,7 +29,7 @@
   align-items: center;
   justify-content: center;
   font-size: 20px;
-  color: rgb(121, 118, 118);
+  color: rgb(255, 255, 255);
   cursor: pointer;
 }
 
@@ -38,6 +38,7 @@
   border: none;
   padding: 20px;
   width: 70vw;
+  color: rgb(255, 255, 255);
 }
 
 .writeInput:focus {
@@ -47,13 +48,14 @@
 .writeText {
   font-size: 20px;
   height: 100vh;
+  color: #000;
 }
 
 .writeSubmit {
   position: absolute;
   top: 20px;
   right: 50px;
-  color: white;
+  color: rgb(0, 0, 0);
   background-color: teal;
   padding: 10px;
   border: none;
